--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
   --black-color: #000;
   --white-color: #fff;
   --common-text-size: 1.5em;
+  --header-nav-size: 400px;
+  --bottom-box-shadow: 0 4px 2px -2px #000;
 }
 * {
   margin: 0;
@@ -24,8 +26,6 @@ body {
   min-width: inherit;
   min-height: inherit;
 }
-
-/* Header */
 .header-container,
 .header-bottom,
 .header-top,
@@ -33,7 +33,14 @@ body {
 .header-logSign__btns,
 .header-sex,
 .header-age,
-.header-name {
+.header-name,
+.main-friend,
+.friend-picture-sex,
+.friend-description,
+.friend-mail,
+.friend-maps,
+.friend-nat,
+.friend-icons {
   display: flex;
 }
 .header,
@@ -56,7 +63,6 @@ body {
   position: fixed;
   z-index: 1;
   color: var(--white-color);
-  /* box-shadow: 0 2px 20px -6px var(--black-color); */
   background-color: var(--white-color);
 }
 .header-container {
@@ -68,7 +74,7 @@ body {
   align-items: center;
 }
 .header-nav {
-  width: 400px;
+  width: var(--header-nav-size);
 }
 .header-nav__list {
   align-items: flex-end;
@@ -94,11 +100,10 @@ body {
     0 -1.5px 2px -2px var(--black-color);
 }
 .header-search__input:focus {
-  box-shadow: 0 4px 2px -2px var(--black-color),
-    0 -4px 2px -2px var(--black-color);
+  box-shadow: var(--bottom-box-shadow), 0 -4px 2px -2px var(--black-color);
 }
 .header-logSign {
-  width: 400px;
+  width: var(--header-nav-size);
   margin: 0 calc(var(--common-text-size) * 2);
 }
 .header-logSign__btns {
@@ -159,7 +164,7 @@ img {
 .header-sex:hover,
 .header-age:hover,
 .header-name:hover {
-  box-shadow: 0 4px 2px -2px var(--black-color);
+  box-shadow: var(--bottom-box-shadow);
 }
 .header-sex__icons img:hover {
   border-radius: 50%;
@@ -180,7 +185,6 @@ main {
   gap: var(--common-text-size);
 }
 .main-friend {
-  display: flex;
   flex-direction: column;
   border-radius: 0.5em;
   box-shadow: 0 0 10px -1px var(--black-color);
@@ -189,7 +193,6 @@ main {
 .friend-picture-sex {
   width: var(--full-size-percent);
   padding-top: var(--common-text-size);
-  display: flex;
   position: relative;
   justify-content: center;
 }
@@ -207,7 +210,7 @@ main {
 .friend-sex {
   width: var(--full-size-percent);
   border-radius: 50%;
-  box-shadow: 0 4px 2px -2px var(--black-color);
+  box-shadow: var(--bottom-box-shadow);
   background: linear-gradient(
     to bottom,
     #d5f2ff,
@@ -228,7 +231,6 @@ main {
   width: var(--full-size-percent);
   padding-top: 0.5em;
   padding-bottom: var(--common-text-size);
-  display: flex;
   flex-direction: column;
   align-items: center;
 }
@@ -239,15 +241,13 @@ main {
 }
 .friend-icons {
   width: var(--full-size-percent);
-  display: flex;
   justify-content: center;
-  gap: 3em;
+  gap: calc(var(--common-text-size) * 2);
 }
 .friend-mail,
 .friend-maps,
 .friend-nat {
   width: 32px;
-  display: flex;
   align-items: center;
   justify-content: center;
   border: 2px solid #fff;
