--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   --black-color: #000;
   --white-color: #fff;
   --common-text-size: 1.5em;
+  --common-font-weight: 900;
 }
 *::after,
 *::before,
@@ -11,6 +12,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 body {
   max-width: 100vw;
@@ -50,13 +53,14 @@ body {
   cursor: pointer;
 }
 .search__input {
+  width: var(--full-size-percent);
   height: 2em;
   padding-left: var(--common-text-size);
   border-radius: var(--common-text-size);
   border: 1px solid black;
   outline: none;
   font-size: var(--common-text-size);
-  font-weight: 900;
+  font-weight: var(--common-font-weight);
   color: var(--black-color);
   box-shadow: 0 4px 2px -2px rgb(124, 119, 119),
     0 -1.5px 2px -2px var(--black-color);
@@ -67,7 +71,7 @@ body {
   align-items: flex-start;
   justify-content: flex-start;
   font-size: var(--common-text-size);
-  font-weight: 900;
+  font-weight: var(--common-font-weight);
 }
 .sort__span {
   opacity: 0.5;
@@ -146,7 +150,7 @@ body {
 .friend-name-age {
   padding-bottom: 0.5em;
   font-size: var(--common-text-size);
-  font-weight: 900;
+  font-weight: var(--common-font-weight);
 }
 .friend-icons {
   width: var(--full-size-percent);
